frills/home.css
/* Color schemes */

body {
  background: #f7f7f7;
  color: #222;
  transition: background .2s;
}

a {
  color: inherit;
  text-decoration: none;
  box-shadow: inset 0 -.4em #bbb;
}
a:hover, a:focus { box-shadow: inset 0 -.5em #b383da; }

.dark body {
  background: black;
  color: #f7f7f7;
}
.dark a { box-shadow: inset 0 -.4em #444; }
.dark a:hover, .dark a:focus { box-shadow: inset 0 -.5em #5d357d; }
.dark .avi { stroke: #f7f7f7; }
.dark .nb2 { fill: #fff; }
.dark .nb3 { fill: #9b59d0; }

/* Main formatting */

html {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Roboto, Ubuntu, Cantarell, Lato, Helvetica, Arial, sans-serif;
  font-size: 125%;
  line-height: 1.5;
  scroll-behavior: smooth;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0 auto;
  padding: 1.5em 1em;
  max-width: 20em;
}

p {
  margin: 0 0 1.5em;
}

.footer {
  font-size: 75%;
  line-height: 2;
  margin-top: 1.5rem;
  text-align: center;
}

/* Decorations */

.hero {
  display: table-cell;
  height: calc(100vh - 4rem);
  vertical-align: middle;
}

.avi {
  box-sizing: border-box;
  display: block;
  margin: 0 auto;
  width: 6em;
}

.nb {
  display: block;
  margin: 0 auto 1.5em;
  width: 5em;
}

#twilight {
  background: none;
  border: none;
  display: inline-block;
  font-size: 2em;
  position: absolute;
  top: .5em;
  right: .5em;
  padding: 0;
}

/* Animations */

@keyframes draw {
  from { stroke-dashoffset: 550; }
  to { stroke-dashoffset: 0; }
}

@keyframes fade {
  from { opacity: 0; }
  to { opacity: 1; }
}

.avi path { animation: 1.3s linear both draw; }
.nb1, .nb2, .nb3 { animation: .2s ease-in .2s both fade; }
.nb2 { animation-delay: .6s; }
.nb3 { animation-delay: 1s; }

@media (prefers-reduced-motion) {
  .avi path, .nb1, .nb2, .nb3 {
    animation: none;
  }
}

